add final code and readme

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
+    <div class = "row">
+        <div class="col-md-12" >
+        <h2>Did you know...</h2>
+        <p>Your body is an ecosystem of its own, with many bacteria living on you and inside you? Your belly button is no exception.</p>
+        <br>
+        <p>This research project gathers data from volunteers about the bacteria found in their belly buttons. You can select a test subject ID number at the left to see that anonymous individual's data. </p>
+        <h3>What's an OTU?</h3>
+        <p>OTU stands for "operational taxonomic unit". In this study, we're using an OTU ID number as shorthand for the scientific name of each bacterium. Some of those scientific names can get quite long, and OTUs are a quick way to refer to them.</p>
+        <br>
+    </div>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
